Book-server/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: book-api-server2
spec:
  rules:
    - host: book-api.localhost.test
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: book-api-server #service name
                port:
                  number: 9090 #service port number
